# axum-login-templates

./: .gitignore  Cargo.toml  Dockerfile  Secrets.toml
migrations/: 20231025170615_schema.sql
src/: lib.rs  main.rs
src/routes/: error.rs  middlewares.rs  mod.rs  oauth.rs  pages.rs
src/templates/: about.html  index.html  layout.html  profile.html
