[package]
name = "login"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["multipart", "macros", "headers"] }
axum-extra = { version = "0.8.0", features = ["cookie-private"] }
chrono = { version = "0.4.31", features = ["clock"] }
oauth2 = "4.4.2"
reqwest = "0.11.22"
sqlx = { version = "0.7.2", features = ["runtime-tokio", "postgres"] }
tower-http = { version = "0.4.4", features = ["cors", "fs"] }
tracing = "0.1.40"
tokio = { version = "1.33.0", features = ["full"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_with = "3.0.0"
serde_json = "1.0.107"
time = { version = "0.3.30", features = [] }
dotenv = "0.15.0"
clap = { version = "4.4.7", features = ["derive", "env"] }
minijinja = { version = "1", features = ["loader"] }
constant_time_eq = "0.3.0"
uuid = { version = "1.5.0", features = ["v4"] }
